--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My learning</p>
+            <!-- <p>My learning</p> -->
+            <div class="mylearning">
+               <p>My Learning</p>
+               <div class="mylearning__popup">
+                   <P>You did not purchase anything yet</P>
+               </div>
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -48,6 +54,10 @@
     <!--Sale Image-->
     <div class="sale-image">
         <img src="./images/sale.jpg" alt="sale-image">
+        <div class="sale-image__offer">
+            <h1>Udemy Flash Sale! 24 hours to save</h1>
+            <p>Get the top courses for just 499. Just one day to save but a lifetime to learn </p>
+        </div>
     </div>
     <!--Recommended-->
     <div class="recommended">
